# xdna-npu-toolkit

./: .gitignore  LICENSE  README.md  install.sh  original-model-signature.txt  pyproject.toml
docs/: CRITICAL-CORRECTION.md  KTRANSFORMERS-ANALYSIS.md  LLM-FEASIBILITY.md  OPTIMIZATION-PLAN.md  PROFILING-FINDINGS.md
docs/wiki/: Compile-Embeddings.md  Home.md  _README.md
engine/: README.md  __init__.py  backends.py  cli.py  models.py  server.py
iron/: ARCHITECTURE.md  README.md  bootstrap.sh  setup-env.sh
iron/builds/: gemm-256-1col.insts.txt  gemm-256-1col.xclbin  gemm-512-4col.insts.txt  gemm-512-4col.xclbin  gemv-288.insts.txt  gemv-288.xclbin
iron/builds/fusion/: fused-add-add.xclbin  single-add.xclbin
iron/designs/: bench_1col_vs_4col.py  bench_gemm.py  npu_kernel.py  npu_server.py  run_gemm.py  run_gemv.py
iron/designs/fusion/: build.sh  fused_add_add.py  run_experiment.py  single_add.py
iron/results/: fusion-experiment.md  gemm-256-benchmark.md  gemm-multi-benchmark.md
scripts/: enable-npu.sh
serve/: BENCHMARK.md  README.md  bench_bf16.py  bench_crossover.py  bench_fast.py  bench_final.py  bench_fused.py  bench_one.py  bench_qwen.py  bench_serving.py  bf16_backend.py  embed.py  fast_kernel.py  forward_bf16.py  forward_fast.py  forward_fused.py  gelu_options.py  isolate_gemm_cost.py  measure_bandwidth.py  minilm_forward.py  npu_backend.py  pooled_backend.py  profile2.py  profile_bf16.py  profile_dispatch.py  profile_fast.py  profile_forward.py  profile_glue.py  profile_qwen.py  profile_single_gemm.py  qwen_backend.py  qwen_debug.py  qwen_f32_ref.py  qwen_forward.py  qwen_keys.py  qwen_ref.py  run_npu_forward.py  test_embed_bf16.py  validate_forward.py  verify_bf16.py  (+2 more)
xdna_npu/: __init__.py  cli.py  detect.py  embed.py  enable.py  export_model.py  ioctl.py  runner.py  validate.py  verdict.py
