[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xdna-npu-toolkit"
version = "0.1.0"
description = "Detect, validate, enable and assess the AMD XDNA NPU on Linux."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Tiberiu Rezus"}]
keywords = ["amd", "ryzen-ai", "npu", "xdna", "amdxdna", "xrt", "phoenix", "strix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]
dependencies = []  # stdlib only

[project.scripts]
xdna-npu = "xdna_npu.cli:main"

[project.urls]
Homepage = "https://github.com/tibrezus/xdna-npu-toolkit"
Issues = "https://github.com/tibrezus/xdna-npu-toolkit/issues"

[tool.setuptools]
packages = ["xdna_npu"]
