[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xdna-npu-toolkit"
version = "0.1.0"
description = "Detect, validate, enable and assess the AMD XDNA NPU on Linux."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Tiberiu Rezus"}]
keywords = ["amd", "ryzen-ai", "npu", "xdna", "amdxdna", "xrt", "phoenix", "strix"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]
dependencies = []  # stdlib only (xdna-npu diagnostics)

[project.optional-dependencies]
# Embedding engine (xdna-embed): model forward + tokenization + NPU kernels.
serve = [
    "numpy",
    "torch",
    "transformers",
    "safetensors",
    "tokenizers",
    "ml_dtypes",   # bfloat16 numpy dtype
]
# NPU execution additionally needs: pyxrt (Arch 'xrt' pkg, on PYTHONPATH) and
# mlir-aie (IRON) wheels for the compiled-GEMM runtime. See docs/SETUP.md.

[project.scripts]
xdna-npu = "xdna_npu.cli:main"
xdna-embed = "engine.cli:main"

[project.urls]
Homepage = "https://github.com/tibrezus/xdna-npu-toolkit"
Issues = "https://github.com/tibrezus/xdna-npu-toolkit/issues"

[tool.setuptools]
packages = ["xdna_npu", "engine", "serve"]
